--- a/app/views/add/index.phtml
+++ b/app/views/add/index.phtml
@@ -8,7 +8,7 @@
     <div class="col-sm">
     </div>
     <div class="col-sm">     
-    <form name="formUser" action="" method="post">
+    <form name="formUser" action="" method="post" enctype="multipart/form-data">
         <div class="form-group row">
           <label class="col-sm-2 col-form-label col-form-label-sm">ชื่อกิจกรรม :</label>
           <div class="col-sm-10">
@@ -33,12 +33,17 @@
         <div class="form-group row">
           <label class="col-sm-2 col-form-label col-form-label-sm"></label>
           <div class="col-sm-10">
-              <input type="file" class="form-control custom-file-input" name="file" id="file">
-              <label class="custom-file-label" for="file" accept="image/*">Choose picture</label>
-           
+          <div class="custom-file">
+          <input type="file" name="photo"  class="custom-file-input"  >
+          <label class="custom-file-label" >Choose file</label>
+    </div>
+        
+
           </div>
+          
         </div>
         <div class="form-group">
+        
           <input class="btn btn-sm btn-success" type="submit" value="Add.">
         </div>
       </form>
