--- a/app/views/event/edit.phtml
+++ b/app/views/event/edit.phtml
@@ -12,7 +12,7 @@ $temp_id=Event::findFirst("id = '$id'");?>
     <div class="col-sm">
     </div>
     <div class="col-sm">     
-    <form name="formUser" action="" method="post">
+    <form name="formUser" action="" method="post" enctype="multipart/form-data">
         <div class="form-group row">
           <label class="col-sm-2 col-form-label col-form-label-sm">ชื่อกิจกรรม : </label>
           <div class="col-sm-10">
@@ -37,14 +37,12 @@ $temp_id=Event::findFirst("id = '$id'");?>
         <div class="form-group row">
           <label class="col-sm-2 col-form-label col-form-label-sm"></label>
           <div class="col-sm-10">
-              <input type="file" class="form-control custom-file-input" name="customFile" id="customFile" value="<?php echo $temp_id->event_picture;?>">
-              <label class="custom-file-label" for="customFile" accept="image/*">Choose picture</label>
-              <?php if($temp_id->event_picture!=''){?>
-   <div class="form-group">  
-          <img style="width:100px; height:100px" src="<?php echo $this->url->getBaseUri().'public/img/'.$temp_id->event_picture; ?>">
-  </div>
-  <?php }?>
-
+          <br><label>ภาพกิจกรรม</label><br>
+    <img src="<?php echo $this->url->getBaseUri().'public/img/'.$temp_id->event_picture ?> "><hr>
+    <div class="custom-file">
+    <input type="file" name="photo"  class="custom-file-input"  >
+    <label class="custom-file-label" >Choose file</label>
+    </div>
           </div>
         </div>
         <div class="form-group">
