--- a/app/views/add/index.phtml
+++ b/app/views/add/index.phtml
@@ -21,7 +21,7 @@
         <div class="form-group row">
           <label class="col-sm-2 col-form-label col-form-label-sm">วันที่ :</label>
           <div class="col-sm-10">
-            <input class="form-control" id="day" name="day" required="" type="date">
+            <input class="form-control" id="day" name="day" required="" type="date"min="2018-01-01" max="2019-12-31" require>
           </div>
         </div>
         <div class="form-group row">
