--- a/app/views/event/edit.phtml
+++ b/app/views/event/edit.phtml
@@ -25,7 +25,7 @@ $temp_id=Event::findFirst("id = '$id'");?>
         <div class="form-group row">
           <label class="col-sm-2 col-form-label col-form-label-sm">วันที่ : </label>
           <div class="col-sm-10">
-            <input class="form-control" id="day" name="day" required="" type="date" value="<?php echo $temp_id->event_date;?>">
+            <input class="form-control" id="day" name="day" required="" type="date" value="<?php echo $temp_id->event_date;?>" min="2018-01-01" max="2019-12-31" require>
           </div>
         </div>
         <div class="form-group row">
